ingress/http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host: "kube-app01"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: httpd-server
            port: 
              number: 80
