ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host: "kube-app02"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-server
            port: 
              number: 80
